# spotify

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: block_fixups.yml  check_formatting.yml  check_python_packaging.yml  unit_test.yml
.thms317/: .python-boilerplate.yml
data/: 3voor12_overlap.csv  artists.json  audio_analysis.json  audio_features.json  categories.json  playlist_stats.csv  playlist_stats_2023_albums.csv  playlist_stats_2023_tracks.csv  playlist_stats_clean.csv  playlist_stats_top_2000.csv  track.json
docs/: docs.md
notebooks/: 3voor12_comparison.ipynb  analyze_artists.ipynb  analyze_artists_genres.ipynb  analyze_tracks.ipynb  clean_dataset.ipynb  dashboard.py  data_cleaning.ipynb  notebook_functions.py
requirements/: development.txt
spotify/: main.py  utils.py
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  default_test.py  test_api_connection.py
